# JniTest

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/pig/android/test/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/include/: NativeSample.cpp  NcnnSample.cpp
app/src/main/java/com/pig/android/test/: BackgroundReplaceActivity.kt  BlurActivity.kt  JsonUtils.kt  MainActivity.kt  Model.kt  NativeSample.kt  ShiCiActivity.kt  Util.kt
app/src/main/java/com/pig/android/test/flow/: FlowActivity.kt  FlowViewModel.kt
app/src/main/jniLibs/opencv-mobile-4.8.1-android/sdk/native/jni/abi-x86/: OpenCVConfig.cmake
app/src/main/res/layout/: activity_background_replace.xml  activity_blur.xml  activity_flow.xml  activity_main.xml  activity_shici.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/pig/android/test/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
